deixando um pouco mais responsivo

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,13 @@ a:link,
 a:visited,
 a:active {
     text-decoration: none;
+    color: var(--general-color)
 }
 
 /*Global configurations*/
 .italic {
     font-style: italic;
+    color: inherit;
 }
 
 i {
@@ -31,6 +33,7 @@ i {
     --text-highlight: rgb(56, 0, 168);
     --ul-bg-color: rgb(156, 156, 156);
     --p-margin-color: rgb(69, 69, 69);
+    --general-color: #24292f;
 }
 
 /*Page itself*/
@@ -41,19 +44,18 @@ body {
     background-color: #24292f;
 }
 
-body > * {
+body>* {
     padding: 15px 2.5% 15px 2.5%;
 }
 
 #header {
     width: 75%;
-    max-width: 1200px;
+    max-width: 1300px;
     align-self: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--main-bg-color);
-
 }
 
 #nav-bar ul {
@@ -70,6 +72,12 @@ body > * {
     background-color: var(--ul-bg-color);
     padding: 10px;
     border-radius: 5px;
+    transition: 0.5s;
+}
+
+#nav-bar a:hover {
+    background-color: var(--general-color);
+    color: white;
 }
 
 #main {
@@ -77,7 +85,7 @@ body > * {
     flex-direction: column;
     width: 75%;
     align-self: center;
-    max-width: 1200px;
+    max-width: 1300px;
     gap: 30px;
     margin: 0;
     background-color: var(--main-bg-color);
@@ -88,6 +96,7 @@ body > * {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    text-align: center;
 }
 
 #welcome-h2 {
@@ -179,6 +188,8 @@ body > * {
 
 .certificate-link {
     font-size: 2.5vh;
+    padding: 2px;
+    color: black;
 }
 
 .projects {
@@ -199,19 +210,24 @@ body > * {
     justify-content: space-between;
 }
 
-#project-link h2 {
-    color: white;
-    margin: 0;
-}
-
+#project-link h2,
 #project-icon {
-    color: white;
+
+    margin: 0;
+    border: none;
 }
 
-#project-link a {
+#project-link {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: 0.5s;
+    color: white;
+}
+
+#project-link:hover {
+    background-color: var(--ul-bg-color);
+    color: var(--general-color);
 }
 
 .form {
@@ -225,10 +241,10 @@ body > * {
     flex-direction: column;
     background-color: white;
     width: 60%;
-    min-width: 500px;
+    min-width: 400px;
     border-radius: 10px;
     font-size: 2.5vh;
-    margin-top: 20px;
+    padding: 10px;
 }
 
 input[type="text"],
@@ -279,4 +295,29 @@ input[type="submit"]:active {
     cursor: pointer;
     background-color: #24292f;
     color: white;
+}
+
+@media screen and (max-width: 1000px) {
+
+    #header,
+    #main {
+        width: 90%;
+        margin: 0 10px 0 10px;
+    }
+
+    #header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px
+    }
+
+    .skills-certificates-div {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .section-text{
+        min-width: 300px;
+    }
 }
