--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body>* {
     padding: 10px;
     border-radius: 5px;
     transition: 0.5s;
+    font-size: 2vh;
 }
 
 #nav-bar a:hover {
@@ -291,10 +292,12 @@ input[type="submit"] {
     align-self: center;
     margin-bottom: 10px;
     border-radius: 10px;
+    transition: .5s;
 }
 
 input[type="submit"]:hover {
     cursor: pointer;
+    background-color: var(--ul-bg-color);
 }
 
 input[type="submit"]:active {
@@ -346,7 +349,7 @@ input[type="submit"]:active {
 
     #header {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
     }
 
@@ -357,7 +360,25 @@ input[type="submit"]:active {
     }
 
     #nav-bar {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #nav-ul {
         display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    #nav-ul a{
+        border-radius: 0;
+        width: 100%;
+    }
+
+    #nav-ul li{
+        display: block;
     }
 
     .menu-btn {
@@ -401,14 +422,13 @@ input[type="submit"]:active {
 
     .menu-btn.open .menu-btn__burger {
         background: transparent;
-        transform: translate(-33px, 0);
     }
 
     .menu-btn.open .menu-btn__burger::before {
-        transform: translate(33px, 0) rotate(45deg);
+        transform: rotate(45deg);
     }
 
     .menu-btn.open .menu-btn__burger::after {
-        transform: translate(33px, 0) rotate(-45deg);
+        transform:rotate(-45deg);
     }
 }
