--- a/src/App.css
+++ b/src/App.css
@@ -117,8 +117,6 @@ nav {
 /*cards*/
 .card-projeto {
   position: relative;
-  border-radius: 10px;
-  overflow: hidden;
   transition: .3s ease-in-out;
   display: flex;
   flex-direction: column;
@@ -146,9 +144,28 @@ nav {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  border-radius: 10px;
   filter: brightness(.3);
   transition: .3s ease-in-out
+}
+
+.about-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: #13131F;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.about-text p {
+  font-size: 1rem;
+  text-align: center;
+  height: fit-content;
 }
 
 .icons-container {
@@ -162,6 +179,25 @@ nav {
 
 .card-projeto:hover {
   transform: scale(1.1);
+  z-index: 1000;
+}
+
+.card-projeto:hover .about-text {
+  animation: in 0.5s forwards;
+}
+
+@keyframes in {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: .5;
+    z-index: 9999;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(100%);
+  }
 }
 
 .card-projeto:hover .icons-container {
