--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ button.collapsed .middle-line {
 
 .links-card {
   display: none;
+  pointer-events: none;
   align-self: center;
   z-index: 999;
   width: 100%;
@@ -165,6 +166,7 @@ button.collapsed .middle-line {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  transition: .5s;
 }
 
 .about-text p {
@@ -188,21 +190,8 @@ button.collapsed .middle-line {
 }
 
 .card-projeto:hover .about-text {
-  animation: in 0.5s forwards;
-}
-
-@keyframes in {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: .5;
-    z-index: 9999;
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(100%);
-  }
+  transform: translateY(100%);
+  opacity: 1;
 }
 
 .card-projeto:hover .icons-container {
@@ -217,6 +206,13 @@ button.collapsed .middle-line {
   display: flex;
   position: absolute;
   margin-top: 45%;
+  animation: in .5s forwards;
+}
+
+@keyframes in {
+  100% {
+    pointer-events: auto;
+  }
 }
 
 .links-card a:hover {
